--- a/compile-server-branch/gcc/ChangeLog
+++ b/compile-server-branch/gcc/ChangeLog
@@ -1,5 +1,9 @@
 2003-12-01  Per Bothner  <pbothner@apple.com>
 
+	* cppfiles.c (_cpp_pop_file_buffer):  Free buffer if main file.
+
+2003-12-01  Per Bothner  <pbothner@apple.com>
+
 	* dwarf2out.c (init_done):  Move inside #ifdef DWARF2_DEBUGGING_INFO.
 
 2003-12-01  Per Bothner  <pbothner@apple.com>
