* c-common.h (nonempty_fragment_reused):  New declaration. 	* c-common.c (nonempty_fragment_reused):  New variable. 	(cb_enter_fragment):  Set it. 	* c-objc-common.c (init_c_objc_common_eachsrc):  Clear it. 	* c-parse.in (program):  Use it in checking for empty source file.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@74215 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/compile-server-branch/gcc/ChangeLog
+++ b/compile-server-branch/gcc/ChangeLog
@@ -1,3 +1,11 @@
+2003-12-02  Per Bothner  <pbothner@apple.com>
+
+	* c-common.h (nonempty_fragment_reused):  New declaration.
+	* c-common.c (nonempty_fragment_reused):  New variable.
+	(cb_enter_fragment):  Set it.
+	* c-objc-common.c (init_c_objc_common_eachsrc):  Clear it.
+	* c-parse.in (program):  Use it in checking for empty source file.
+
 2003-12-02  Mike Stump  <mrs@apple.com>
 
 	* config/darwin-c.c: struct cpp_dir -> cpp_dir.
