--- a/gcc-3_3-rhl-branch/gcc/cp/ChangeLog
+++ b/gcc-3_3-rhl-branch/gcc/cp/ChangeLog
@@ -1,3 +1,26 @@
+2003-11-14  Bernardo Innocenti  <bernie@develer.com>
+
+	Backport from 3.4-branch.
+
+	2003-06-25  Giovanni Bajo  <giovannibajo@libero.it>
+
+        PR c++/2094
+        * pt.c (unify): Add support for PTRMEM_CST and
+        FIELD_DECL unification.
+
+2003-11-08  Bernardo Innocenti  <bernie@develer.com>
+
+	Backport from 3.4-branch.
+
+	2003-10-08  Giovanni Bajo  <giovannibajo@libero.it>
+
+	* cp_tree.h: Added TFF_NO_FUNCTION_ARGUMENTS.
+	* error.c (dump_function_decl): Use it to skip the dump of the
+	arguments.
+	(dump_expr): When dumping a declaration found within an
+	expression, always set TFF_NO_FUNCTION_ARGUMENTS
+	in the flags.
+
 2003-10-23  Jason Merrill  <jason@redhat.com>
 
 	PR c++/12726
