--- a/gcc-3_3-branch/gcc/ChangeLog
+++ b/gcc-3_3-branch/gcc/ChangeLog
@@ -1,3 +1,13 @@
+2003-12-03  Kean Johnston  <jkj@sco.com>
+
+	PR 12969
+	* fixinc/inclhack.def (AAB_svr4_replace_byteorder): Revert the
+	change I made on 2003-08-11 that removes the mach lines.
+	Restore them to the same list thats in the head, as per
+	Nathanael Nerode's changes.
+	* fixinc/fixincl.x: Regenerated
+	* fixinc/tests/base/ansi/string.h: Fix test case
+
 2003-12-03  James E Wilson  <wilson@specifixinc.com>
 
 	2003-12-01  James E Wilson  <wilson@specifixinc.com>
