* expr.c (store_constructor): Only set RTX_UNCHANGING_P for 	read-only field if cleared is 0.
	* gcc.dg/20031202-1.c: New test.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@74250 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_3-branch/gcc/testsuite/ChangeLog
+++ b/gcc-3_3-branch/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2003-12-03  Jakub Jelinek  <jakub@redhat.com>
+
+	* gcc.dg/20031202-1.c: New test.
+
 2003-12-03  Josef Zlomek  <zlomekj@suse.cz>
 
 	Backport from mainline
