--- a/gcc-3_3-branch/gcc/ChangeLog
+++ b/gcc-3_3-branch/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2003-12-03  Jakub Jelinek  <jakub@redhat.com>
+
+	* expr.c (store_constructor): Only set RTX_UNCHANGING_P for
+	read-only field if cleared is 0.
+
 2003-12-03  Kean Johnston  <jkj@sco.com>
 
 	PR 12969
