--- a/gcc-3_3-branch/gcc/ChangeLog
+++ b/gcc-3_3-branch/gcc/ChangeLog
@@ -1,3 +1,17 @@
+2003-12-03  James E Wilson  <wilson@specifixinc.com>
+
+       2003-11-29  James E Wilson  <wilson@specifixinc.com>
+       * gcc.c (init_spec): Pass -lunwind to init_gcc_specs in eh_name
+       instead of in shared_name.
+
+2003-12-03 David Mosberger  <davidm@hpl.hp.com>
+
+       2003-11-20 David Mosberger  <davidm@hpl.hp.com>
+       * config/t-libunwind (LIB2ADDEH): Add unwind-c.c.
+       (SHLIB_LC): Define.
+       * unwind-libunwind.c (_Unwind_GetCFA): Implement.
+       (_Unwind_GetBSP) [UNW_TARGET_IA64]: New function.
+	
 2003-12-03  Jakub Jelinek  <jakub@redhat.com>
 
 	* expr.c (store_constructor): Only set RTX_UNCHANGING_P for
