2003-12-04  Christopher Saunders  <ctsa@u.washington.edu>
	PR libstdc++/13290
	* include/bits/stl_algo.h (generate_n): Fix typo.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@74284 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_3-branch/libstdc++-v3/ChangeLog
+++ b/gcc-3_3-branch/libstdc++-v3/ChangeLog
@@ -1,3 +1,8 @@
+2003-12-04  Christopher Saunders  <ctsa@u.washington.edu>
+
+	PR libstdc++/13290
+	* include/bits/stl_algo.h (generate_n): Fix typo.
+
 2003-12-03  Benjamin Kosnik  <bkoz@redhat.com>
 
 	* include/bits/basic_ios.h (basic_ios::setstate): Revert.
