--- a/tree-ssa-20020619-branch/libgfortran/ChangeLog
+++ b/tree-ssa-20020619-branch/libgfortran/ChangeLog
@@ -1,3 +1,8 @@
+2003-12-05  Melvin Hadasht  <melvin.hadasht@free.fr>
+
+	* io/transfer.c (data_transfer_init): Give a runtime error for list
+	formatted reads and writes from/to files opened for unformatted IO.
+
 2003-11-30  Paul Brook  <paul@nowt.org>
 
 	* runtime/memory.c (push_context): Remove.
