--- a/compile-server-branch/gcc/ChangeLog
+++ b/compile-server-branch/gcc/ChangeLog
@@ -1,10 +1,27 @@
-2003-12-02  Per Bothner  <pbothner@apple.com>
+2003-12-05  Per Bothner  <pbothner@apple.com>
+
+	* line-map.h (source_location):  New typedef.
+	(fileline):  Redefined as source_location.
+	(struct line_map, linemap_add, linemap_lookup):  Replace filefile
+	by source_location.
+	* line-map.c (linemap_add, linemap_lookup):  Use source_location.
+
+003-12-02  Per Bothner  <pbothner@apple.com>
 
 	* c-common.h (nonempty_fragment_reused):  New declaration.
 	* c-common.c (nonempty_fragment_reused):  New variable.
 	(cb_enter_fragment):  Set it.
 	* c-objc-common.c (init_c_objc_common_eachsrc):  Clear it.
 	* c-parse.in (program):  Use it in checking for empty source file.
+
+2003-11-10  Mike Stump  <mrs@apple.com>
+
+      * c-pch.c (c_common_no_more_pch): Don't unmap more than once, as
+     other compilation units can reuse the PCH state as is.
+
+2003-10-30  Mike Stump  <mrs@apple.com>
+
+      * c-common.c (reset_hashnode): Also clear NODE_DIAGNOSTIC.
 
 2003-12-02  Mike Stump  <mrs@apple.com>
 
