--- a/tree-ssa-20020619-branch/gcc/ChangeLog
+++ b/tree-ssa-20020619-branch/gcc/ChangeLog
@@ -1,3 +1,11 @@
+2003-12-05  Per Bothner  <pbothner@apple.com>
+
+	* line-map.h (source_location):  New typedef.
+	(fileline):  Redefined as source_location.
+	(struct line_map, linemap_add, linemap_lookup):  Replace filefile
+	by source_location.
+	* line-map.c (linemap_add, linemap_lookup):  Use source_location.
+
 2003-12-03  Andrew Haley  <aph@redhat.com>
 
 	* tree-eh.c (tree_could_trap_p): Add division instructions.
