--- a/gcc-3_3-branch/gcc/ChangeLog
+++ b/gcc-3_3-branch/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2003-12-05  Andrew Pinski <pinskia@physics.uc.edu>
+
+	PR driver/13211
+	* gcc.c (execute) Increment execution_count when returning
+	early because verbose_only_flag is true.
+
 2003-12-05  Stuart Menefy <stuart.menefy@st.com>
 	    J"orn Rennecke <joern.rennecke@superh.com>
 
