* tree-ssa-loop.c: New. 	* Makefile.in (tree-ssa-loop.o): New. 	* common.opt (ftree-loop-optimize): Add. 	* flags.h (flag_tree_loop): Declare. 	* opts.c (decode_options): Enable flag_tree_loop at -O1. 	(common_handle_option): Handle OPT_ftree_loop_optimize. 	* timevar.def (TV_TREE_LOOP): New. 	* toplev.c (flag_tree_loop): New. 	(f_options): Add -ftree-loop-optimize. 	* tree-cfg.c (build_tree_cfg): Remove disabled loop optimizer 	initialization. 	(tree_make_forwarder_block): Update phi nodes. 	(tree_loop_optimizer_init): Don't call force_single_succ_latches. 	(tree_try_redirect_by_replacing_jump): Comment fix. 	* tree-dump.c (dump_files): Add .loop dump. 	* tree-flow.h (tree_ssa_loop_opt, set_phi_nodes): Declare. 	* tree-optimize.c (optimize_function_tree): Call tree_ssa_loop_opt. 	* tree.h (enum tree_dump_index): Add TDI_loop. 	* tree-flow-inline.h (set_phi_nodes): New. 	* doc/invoke.texi (-fdump-tree-loop, -ftree-loop-optimize): Document.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@74364 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/tree-ssa-20020619-branch/gcc/doc/invoke.texi
+++ b/tree-ssa-20020619-branch/gcc/doc/invoke.texi
@@ -255,7 +255,7 @@ in the following sections.
 -fdump-tree-ccp@r{[}-@var{n}@r{]} -fdump-tree-dce@r{[}-@var{n}@r{]} @gol
 -fdump-tree-gimple@r{[}-raw@r{]} -fdump-tree-mudflap@r{[}-@var{n}@r{]} @gol
 -fdump-tree-must-alias@r{[}-@var{n}@r{]} -fdump-tree-dom@r{[}-@var{n}@r{]}@gol
--fdump-tree-sra@r{[}-@var{n}@r{]}
+-fdump-tree-loop@r{[}-@var{n}@r{]} -fdump-tree-sra@r{[}-@var{n}@r{]} @gol
 -feliminate-dwarf2-dups -feliminate-unused-debug-types @gol
 -feliminate-unused-debug-symbols -fmem-report -fprofile-arcs @gol
 -frandom-seed=@var{string} -fsched-verbose=@var{n} @gol
@@ -305,7 +305,7 @@ in the following sections.
 -funswitch-loops  -fold-unroll-loops  -fold-unroll-all-loops @gol
 -ftree-pre  -ftree-ccp  -ftree-dce  -ftree-copyprop  @gol
 -fdisable-tree-ssa -ftree-dominator-opts -ftree-must-alias @gol
--ftree-sra @gol
+-ftree-loop-optimize -ftree-sra @gol
 --param @var{name}=@var{value}
 -O  -O0  -O1  -O2  -O3  -Os}
 
@@ -3573,6 +3573,11 @@ file name is made by appending @file{.sra} to the source file name.
 Dump each function after applying dominator tree optimizations.  The file
 name is made by appending @file{.dom} to the source file name.
 
+@item loop
+@opindex fdump-tree-loop
+Dump each function after applying tree-level loop optimizations.  The file
+name is made by appending @file{.loop} to the source file name.
+
 @item all
 @opindex fdump-tree-all
 Enable all the available tree dumps with the flags provided in this option.
@@ -4321,6 +4326,10 @@ default at -O and higher.
 
 @item -ftree-dominator-opts
 Perform dead code elimination (DCE) on trees.  This flag is enabled by
+default at -O and higher.
+
+@item -ftree-loop-optimize
+Perform loop optimization on trees.  This flag is enabled by
 default at -O and higher.
 
 @item -ftree-must-alias
