PR c++/13323 	* class.c (same_signature_p): Handle conversion operators 	correctly. 	(check_for_override): Likewise.
	PR c++/13323
	* g++.dg/inherit/operator2.C: New test.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@74372 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_3-branch/gcc/cp/ChangeLog
+++ b/gcc-3_3-branch/gcc/cp/ChangeLog
@@ -1,3 +1,10 @@
+2003-12-06  Mark Mitchell  <mark@codesourcery.com>
+
+	PR c++/13323
+	* class.c (same_signature_p): Handle conversion operators
+	correctly.
+	(check_for_override): Likewise.
+
 2003-11-14  Bernardo Innocenti  <bernie@develer.com>
 
 	Backport from 3.4-branch.
