+2003-12-06  Andrew Pinski <apinski@apple.com> + +       partial PR libmudflap/12670 +       * mf-hooks1.c: Respect Darwin checks.  Conditionalize POSIX_SOURCE. +       * mf-hooks2.c: Likewise. +       * mf-hooks3.c: Likewise. +
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@74383 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/tree-ssa-20020619-branch/libmudflap/ChangeLog
+++ b/tree-ssa-20020619-branch/libmudflap/ChangeLog
@@ -1,3 +1,10 @@
+2003-12-06  Andrew Pinski <apinski@apple.com>
+
+	partial PR libmudflap/12670
+	* mf-hooks1.c: Respect Darwin checks.  Conditionalize POSIX_SOURCE.
+	* mf-hooks2.c: Likewise.
+	* mf-hooks3.c: Likewise.
+
 2003-11-19  Frank Ch. Eigler  <fche@redhat.com>
 
 	libstdc++/11696
