--- a/gcc-3_3-branch/gcc/ChangeLog
+++ b/gcc-3_3-branch/gcc/ChangeLog
@@ -1,3 +1,12 @@
+2003-12-08  Andrew Pinski  <pinskia@physics.uc.edu>
+
+	PR middle-end/10060
+	* emit-rtl.c (copy_rtx_if_shared): Split out into ...
+	(copy_rtx_if_shared_1): here and optimize the last one
+	in the sequence into tail-recursion.
+	(reset_used_flags): Optimize the last one
+	in the sequence into tail-recursion.
+
 2003-12-07  Alan Modra  <amodra@bigpond.net.au>
 
 	* config/rs6000/rs6000.c (rs6000_elf_section_type_flags): Don't
