PR target/13150         * collect2.c (GCC_OK_SYMBOL): Add support for AIX C_WEAKEXT.         (GCC_UNDEF_SYMBOL): Same.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@74426 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_3-branch/gcc/ChangeLog
+++ b/gcc-3_3-branch/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2003-12-08  David Edelsohn  <edelsohn@gnu.org>
+	    Graham Reed <greed@pobox.com>
+
+	PR target/13150
+        * collect2.c (GCC_OK_SYMBOL): Add support for AIX C_WEAKEXT.
+        (GCC_UNDEF_SYMBOL): Same.
+
 2003-12-08  Andrew Pinski  <pinskia@physics.uc.edu>
 
 	PR middle-end/10060
