--- a/gcc-3_3-branch/libstdc++-v3/ChangeLog
+++ b/gcc-3_3-branch/libstdc++-v3/ChangeLog
@@ -1,3 +1,9 @@
+2003-12-08  David S. Miller  <davem@redhat.com>
+
+	PR libstdc++/12496
+	* config/cpu/sparc/atomicity.h (__exchange_and_add, __atomic_add):
+	Extend increment to _Atomic_word before giving to assembler.
+
 2003-12-04  Christopher Saunders  <ctsa@u.washington.edu>
 
 	PR libstdc++/13290
