* emit-rtl.c:  Partually revert yesterday's change - resetting 	label_num causes problems if reload re-uses inline functions.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@74483 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/compile-server-branch/gcc/ChangeLog
+++ b/compile-server-branch/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2003-12-09  Per Bothner  <per@bothner.com>
+
+	* emit-rtl.c:  Partually revert yesterday's change - resetting
+	label_num causes problems if reload re-uses inline functions.
+
 2003-12-08  Per Bothner  <pbothner@apple.com>
 
 	* c-common.c (restore_fragment, cb_enter_fragment, cb_exit_fragment):
