Share buffer and fragments for files that have same path. 	* cppfiles.c (struct _cpp_file_data):  New type. 	(struct _cpp_file):  Move "buffer-related" fields to _cpp_file_data. 	(open_file):  Look for path in file_hash.  If found, reuse its 	_cpp_file_data.  Otherwise, if file found, enter path in file_hash.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@74484 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/compile-server-branch/gcc/ChangeLog
+++ b/compile-server-branch/gcc/ChangeLog
@@ -1,4 +1,12 @@
-2003-12-09  Per Bothner  <per@bothner.com>
+2003-12-09  Per Bothner  <pbothner@apple.com>
+
+	Share buffer and fragments for files that have same path.
+	* cppfiles.c (struct _cpp_file_data):  New type.
+	(struct _cpp_file):  Move "buffer-related" fields to _cpp_file_data.
+	(open_file):  Look for path in file_hash.  If found, reuse its
+	_cpp_file_data.  Otherwise, if file found, enter path in file_hash.
+
+2003-12-09  Per Bothner  <pbothner@apple.com>
 
 	* emit-rtl.c:  Partually revert yesterday's change - resetting
 	label_num causes problems if reload re-uses inline functions.
