2003-12-09  Kelley Cook  <kelleycook@wideopenwest.com>
	2003-06-04  Kelley Cook  <kelleycook@wideopenwest.com>
	PR optimization/4490
	* config/i386/i386.md: Don't use XFMode if TARGET_128BIT_LONG_DOUBLE.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@74485 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_3-branch/gcc/ChangeLog
+++ b/gcc-3_3-branch/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2003-12-09  Kelley Cook  <kelleycook@wideopenwest.com>
+
+	2003-06-04  Kelley Cook  <kelleycook@wideopenwest.com>
+	PR optimization/4490
+	* config/i386/i386.md: Don't use XFMode if TARGET_128BIT_LONG_DOUBLE.
+
 2003-12-08  David Edelsohn  <edelsohn@gnu.org>
 	    Graham Reed <greed@pobox.com>
 
