--- a/csl-hpux-branch/gcc/ChangeLog
+++ b/csl-hpux-branch/gcc/ChangeLog
@@ -1,3 +1,12 @@
+2003-12-10  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* target.h (gcc_target.abi): Add cxx_dtor_in_charge_parm.
+	* target-def.h (TARGET_ABI_CXX_DTOR_IN_CHARGE_PARM): New.
+	(TARGET_ABI): Add new initializer.
+	* config/ia64/ia64.c (TARGET_ABI_CXX_DTOR_IN_CHARGE_PARM):
+	Override on HPUX.
+	* doc/tm.texi (TARGET_ABI_CXX_DTOR_IN_CHARGE_PARM): Document
+
 2003-11-30  Nathan Sidwell  <nathan@codesourcery.com>
 
 	* target.h (gcc_target.abi): Add cxx_expr_decl_mangling member.
