--- a/csl-hpux-branch/gcc/cp/ChangeLog
+++ b/csl-hpux-branch/gcc/cp/ChangeLog
@@ -1,3 +1,10 @@
+2003-12-10  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* class.c (build_clone): Use cxx_dtor_in_charge_parm_ to
+	determine whether a vestigial in_charge parameter is needed.
+	* call.c (build_new_method_call): Prepend vestigial in-charge only
+	if there is one.
+
 2003-11-30  Nathan Sidwell  <nathan@codesourcery.com>
 
 	* mangle.c (write_builtin_type): Mangle long double correctly for
