--- a/gcc-3_3-branch/gcc/testsuite/ChangeLog
+++ b/gcc-3_3-branch/gcc/testsuite/ChangeLog
@@ -1,3 +1,11 @@
+2003-12-10  Eric Botcazou  <ebotcazou@libertysurf.fr>
+
+	Backport from mainline:
+
+	2003-11-05  Eric Botcazou  <ebotcazou@libertysurf.fr>
+
+	* gcc.dg/uninit-C.c: XFAIL on non 64-bit Solaris versions.
+
 2003-12-06  Mark Mitchell  <mark@codesourcery.com>
 
 	PR c++/13323
