--- a/gcc-3_3-branch/gcc/ChangeLog
+++ b/gcc-3_3-branch/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2003-12-10  Eric Botcazou  <ebotcazou@libertysurf.fr>
+
+	PR target/13354
+	* config/sparc/sparc.c (sparc_output_mi_thunk): Load DELTA
+	manually if one can do that with only one instruction.
+
 2003-12-09  Kelley Cook  <kelleycook@wideopenwest.com>
 
 	2003-06-04  Kelley Cook  <kelleycook@wideopenwest.com>
@@ -18179,3 +18185,4 @@ cp:
 	* mips.h (FUNCTION_ARG_REGNO_P): Fix parentheses.
 
 See ChangeLog.7 for earlier changes.
+
