--- a/gcc-3_3-branch/gcc/testsuite/ChangeLog
+++ b/gcc-3_3-branch/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2003-12-10  Nathanael Nerode  <neroden@gcc.gnu.org>
+
+	Backport from mainline:
+	* gcc.dg/cpp/trad/xwin1.c: New test case.
+
 2003-12-10  Eric Botcazou  <ebotcazou@libertysurf.fr>
 
 	Backport from mainline:
