* builtins.c (expand_builtin_profile_func): New.         (expand_builtin): Use it.         * builtins.def (BUILT_IN_PROFILE_FUNC_ENTER): New.         (BUILT_IN_PROFILE_FUNC_EXIT): New.         * function.c (expand_function_start, expand_function_end): Don't         do function instrumentation here.         * gimplify.c (gimplify_function_tree): Do it here.
        * c-opts.c (c_common_post_options): Don't ever use rtl inlining.
fortran/
        * options.c (gfc_post_options): Don't ever use rtl inlining.
java/
        * lang.c (java_post_options): Don't ever use rtl inlining.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@74527 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/tree-ssa-20020619-branch/gcc/fortran/ChangeLog
+++ b/tree-ssa-20020619-branch/gcc/fortran/ChangeLog
@@ -1,3 +1,7 @@
+2003-12-10  Richard Henderson  <rth@redhat.com>
+
+	* options.c (gfc_post_options): Don't ever use rtl inlining.
+
 2003-12-05  Canqun Yang  <canqun@nudt.edu.cn>
 
 	* trans-common.c: Re-implement COMMON blocks and EQUIVALENCE lists.
