--- a/gcc-3_3-branch/gcc/testsuite/ChangeLog
+++ b/gcc-3_3-branch/gcc/testsuite/ChangeLog
@@ -1,3 +1,11 @@
+2003-12-11  Eric Botcazou  <ebotcazou@libertysurf.fr>
+
+	Backport from mainline:
+
+	2003-12-07  Falk Hueffner  <falk@debian.org>
+
+	* g++.dg/opt/noreturn-1.C: New test.
+
 2003-12-10  Robert Schiele  <rschiele@uni-mannheim.de>
 
 	PR other/10819
