--- a/gcc-3_3-branch/gcc/ChangeLog
+++ b/gcc-3_3-branch/gcc/ChangeLog
@@ -4,6 +4,16 @@
 
 	2003-12-07  Eric Botcazou  <ebotcazou@libertysurf.fr>
 
+	PR optimization/13060
+	* function.c (fixup_var_refs_1) [SUBREG]: Recognize even if a
+	replacement already exists.  Fix again the whole insn if that fails.
+
+2003-12-11  Eric Botcazou  <ebotcazou@libertysurf.fr>
+
+	Backport from mainline:
+
+	2003-12-07  Eric Botcazou  <ebotcazou@libertysurf.fr>
+
 	PR optimization/12965
 	* caller-save.c (save_call_clobbered_regs): Do not save/restore
 	registers around no-return calls.
