--- a/gcc-3_3-branch/gcc/testsuite/ChangeLog
+++ b/gcc-3_3-branch/gcc/testsuite/ChangeLog
@@ -2,6 +2,14 @@
 
 	Backport from mainline:
 
+	2003-12-07  Eric Botcazou  <ebotcazou@libertysurf.fr>
+
+	* g77.f-torture/compile/13060.f: New test.
+
+2003-12-11  Eric Botcazou  <ebotcazou@libertysurf.fr>
+
+	Backport from mainline:
+
 	2003-12-07  Falk Hueffner  <falk@debian.org>
 
 	* g++.dg/opt/noreturn-1.C: New test.
