--- a/gcc-3_3-branch/gcc/testsuite/ChangeLog
+++ b/gcc-3_3-branch/gcc/testsuite/ChangeLog
@@ -2,6 +2,14 @@
 
 	Backport from mainline:
 
+	2003-12-07  Wolfgang Bangerth  <bangerth@dealii.org>
+
+	* gcc.dg/overflow-1.c: New test.
+
+2003-12-11  Eric Botcazou  <ebotcazou@libertysurf.fr>
+
+	Backport from mainline:
+
 	2003-12-07  Eric Botcazou  <ebotcazou@libertysurf.fr>
 
 	* g77.f-torture/compile/13060.f: New test.
