--- a/tree-ssa-20020619-branch/libmudflap/ChangeLog
+++ b/tree-ssa-20020619-branch/libmudflap/ChangeLog
@@ -1,3 +1,7 @@
+2003-12-11  Frank Ch. Eigler  <fche@redhat.com>
+
+	* testsuite/libmudflap.c/pass42-frag.c, pass43-frag.c: New tests.
+
 2003-12-08  Andrew Pinski  <pinskia@physics.uc.edu>
 
 	PR libmudflap/12670
