2003-12-12  Huang Chun <chunhuang73@hotmail.com>
	* primary.c (match_substring): Fix substring bug for start point
	or end point is NULL.
	* trans-expr.c (gfc_conv_substring): Ditto
	* trans-types.c (gfc_sym_type): Get correct type of scalar
	character variables.
	* trans-intrinsic.c (gfc_conv_intrinsic_len): Handle character in
	derived type.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@74564 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/tree-ssa-20020619-branch/gcc/fortran/ChangeLog
+++ b/tree-ssa-20020619-branch/gcc/fortran/ChangeLog
@@ -1,3 +1,13 @@
+2003-12-12  Huang Chun <chunhuang73@hotmail.com>
+
+	* primary.c (match_substring): Fix substring bug for start point
+	or end point is NULL.
+	* trans-expr.c (gfc_conv_substring): Ditto
+	* trans-types.c (gfc_sym_type): Get correct type of scalar 
+	character variables.
+	* trans-intrinsic.c (gfc_conv_intrinsic_len): Handle character in 
+	derived type.
+
 2003-12-10  Richard Henderson  <rth@redhat.com>
 
 	* options.c (gfc_post_options): Don't ever use rtl inlining.
