--- a/tree-ssa-20020619-branch/libgfortran/ChangeLog
+++ b/tree-ssa-20020619-branch/libgfortran/ChangeLog
@@ -1,3 +1,7 @@
+2003-12-12  Huang Chun <chunhuang73@hotmal.com>
+
+	* intrinsics/string_intrinsics.c (string_index): Fix logics thinko.
+
 2003-12-05  Melvin Hadasht  <melvin.hadasht@free.fr>
 
 	* io/transfer.c (data_transfer_init): Give a runtime error for list
